Fix : NavBar z-index

--- a/client/src/components/NavBar.module.css
+++ b/client/src/components/NavBar.module.css
@@ -36,6 +36,7 @@
   position: relative;
   display: block;
   float: right; 
+  z-index: 999;
  
 }
 
